# tg-kinoclub-helper

./: .env.example  .gitignore  Cargo.toml  README.md  store.json
src/: main.rs  storage.rs  tg.rs  tmdb.rs
