[package]
name = "tg-kinoclub-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
reqwest = "0.12.23"
dotenvy = "0.15"
once_cell = "1.21.3"
regex = "1.11.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
anyhow = "1.0.99"
unicode-segmentation = "1.12"
serde_json = "1.0.143"
thiserror = "2.0.16"